@@ -85,7 +85,7 @@ class GitServerSideBand64kTestCase(GitServerTestCase):
 
     def setUp(self):
         super(GitServerSideBand64kTestCase, self).setUp()
-        # side-band-64k is broken in the widows client.
+        # side-band-64k is broken in the windows client.
         # https://github.com/msysgit/git/issues/101
         # Fix has landed for the 1.9.3 release.
         if os.name == 'nt':
